[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "padel-game-analyzer"
version = "1.0.0"
description = "AI-powered padel match analysis — player tracking, ball hit detection, and performance analytics using YOLO"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "user171125"}
]
keywords = ["padel", "sports-analytics", "yolo", "computer-vision", "player-tracking", "ball-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Multimedia :: Video :: Analysis",
]

dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
gpu = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/user171125/padel-game-analyzer"
Repository = "https://github.com/user171125/padel-game-analyzer"
Issues = "https://github.com/user171125/padel-game-analyzer/issues"

[project.scripts]
padel-analyze = "run_analysis:main"

[tool.setuptools.packages.find]
include = ["trackers*", "analyzers*", "reporters*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
